Applications/Pi-hole/base/resources/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: pihole
  labels:
    reloader.stakater.com/reload: 'false' # Enables reloader for this namespace
