Applications/Pi-hole/base/resources/statefulset.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: pihole
  labels:
    app.kubernetes.io/component: 'application'
  annotations:
    #reloader.stakater.com/auto: 'true' # Reloads workload when any referenced ConfigMap or Secret changes
    reloader.stakater.com/search: 'false' # Enables search mode (only reloads if matching secrets/configMaps are found)
    #configmap.reloader.stakater.com/auto: 'true' # Reloads only when referenced ConfigMap(s) change
    #configmap.reloader.stakater.com/reload: '' # Reloads when specific ConfigMap(s) change, regardless of how they're used
    #secret.reloader.stakater.com/auto: 'true' # Reloads only when referenced Secret(s) change
    #secret.reloader.stakater.com/reload: '' # Reloads when specific Secret(s) change, regardless of how they're used
    reloader.stakater.com/rollout-strategy: 'rollout' # Specifies the rollout strategy for the workload (rollout (default) / restart)
spec:
  revisionHistoryLimit: 3
  serviceName: pihole-dashboard
  selector:
    matchLabels:
      app.kubernetes.io/component: 'application'
  replicas: 0
  persistentVolumeClaimRetentionPolicy:
    whenScaled: Retain
    whenDeleted: Retain
  updateStrategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/component: 'application'
      annotations:
        k8s.v1.cni.cncf.io/networks: pihole/pihole
    spec:
      restartPolicy: Always
      terminationGracePeriodSeconds: 180
      securityContext:
        fsGroup: 1000
      containers:
        - name: pihole
          image: pihole/pihole:0.0.0
          command: ['/bin/sh', '-c']
          args:
            - chmod 644 /macvendor.db && exec start.sh
          imagePullPolicy: IfNotPresent
          securityContext:
            runAsNonRoot: false
            allowPrivilegeEscalation: false
            seccompProfile:
              type: RuntimeDefault
            readOnlyRootFilesystem: false
          resources:
            requests:
              cpu: 0.1
              memory: 128Mi
            limits:
              cpu: 0.5
              memory: 512Mi
          ports:
            - containerPort: 80
              protocol: TCP
              name: http
            - containerPort: 53
              protocol: TCP
              name: dns-tcp
            - containerPort: 53
              protocol: UDP
              name: dns-udp
          startupProbe:
            exec:
              command: ['/usr/bin/dig', '@127.0.0.1', 'localhost']
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 2
            successThreshold: 1
            failureThreshold: 30
          readinessProbe:
            exec:
              command: ['/usr/bin/dig', '@127.0.0.1', 'localhost']
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 2
            successThreshold: 1
            failureThreshold: 3
          livenessProbe:
            exec:
              command: ['/usr/bin/dig', '@127.0.0.1', 'localhost']
            initialDelaySeconds: 30
            periodSeconds: 60
            timeoutSeconds: 2
            successThreshold: 1
            failureThreshold: 3
          volumeMounts:
            - mountPath: /etc/pihole
              name: pihole-config
            - name: pihole-conditional-forwarders
              mountPath: /etc/dnsmasq.d/01-custom-forwarders.conf
              subPath: 01-custom-forwarders.conf
            - name: dshm
              mountPath: /dev/shm
      volumes:
        - name: pihole-conditional-forwarders
          configMap:
            name: pihole-conditional-forwarders
        - name: dshm
          emptyDir:
            medium: Memory
            sizeLimit: 256Mi
  volumeClaimTemplates:
    - metadata:
        name: pihole-config
        labels:
          app.kubernetes.io/component: 'application'
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: longhorn-retain
        resources:
          requests:
            storage: 0Gi
