Applications/Pi-hole/base/resources/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: pihole-dashboard
  labels:
    app.kubernetes.io/component: 'application'
spec:
  selector:
    app.kubernetes.io/name: pihole
  clusterIP: None
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      name: http
  type: ClusterIP
