Applications/Pi-hole/base/resources/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: pihole
  labels:
    app.kubernetes.io/component: 'application'
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: CHANGE_ME
      kind: Rule
      middlewares:
        - name: chain-admin
          namespace: traefik-system
      services:
        - name: pihole-dashboard
          port: 80
  tls:
    secretName: pihole-certificate
